[SCA-2026] tests updated