@@ -32,12 +32,12 @@ public class JAXBWMLTest {
     public void testTimeSeries() throws Exception {
 	InputStream timeSeriesStream = JAXBWMLTest.class.getClassLoader().getResourceAsStream("timeSeriesResponse.xml");
 	TimeSeriesResponseType tsrt = JAXBWML.getInstance().parseTimeSeries(timeSeriesStream);
-	int value = tsrt.getTimeSeries().get(0).getValues().get(0).getValue().get(0).getValue().intValue();
+	int value = tsrt.getTimeSeries().getFirst().getValues().getFirst().getValue().getFirst().getValue().intValue();
 	assertEquals(13, value);
 	ByteArrayOutputStream baos = new ByteArrayOutputStream();
 	JAXBWML.getInstance().marshal(tsrt, baos);
 	tsrt = JAXBWML.getInstance().parseTimeSeries(new ByteArrayInputStream(baos.toByteArray()));
-	value = tsrt.getTimeSeries().get(0).getValues().get(0).getValue().get(0).getValue().intValue();
+	value = tsrt.getTimeSeries().getFirst().getValues().getFirst().getValue().getFirst().getValue().intValue();
 	assertEquals(13, value);
     }
 
@@ -45,12 +45,12 @@ public class JAXBWMLTest {
     public void testSites() throws Exception {
 	InputStream sitesStream = JAXBWMLTest.class.getClassLoader().getResourceAsStream("sitesResponse.xml");
 	SiteInfoResponseType sirt = JAXBWML.getInstance().parseSitesResponse(sitesStream);
-	String siteName = sirt.getSite().get(0).getSiteInfo().getSiteName();
+	String siteName = sirt.getSite().getFirst().getSiteInfo().getSiteName();
 	assertEquals("Ancient_Forest", siteName);
 	ByteArrayOutputStream baos = new ByteArrayOutputStream();
 	JAXBWML.getInstance().marshal(sirt, baos);
 	sirt = JAXBWML.getInstance().parseSitesResponse(new ByteArrayInputStream(baos.toByteArray()));
-	siteName = sirt.getSite().get(0).getSiteInfo().getSiteName();
+	siteName = sirt.getSite().getFirst().getSiteInfo().getSiteName();
 	assertEquals("Ancient_Forest", siteName);
     }
 
@@ -79,28 +79,37 @@ public class JAXBWMLTest {
 
     @Test
     public void testNullEmpty() throws Exception {
+
 	SiteInfoResponseType sirt = new SiteInfoResponseType();
 	Site site = new Site();
 	SiteInfoType siteInfo = new SiteInfoType();
+
 	SeriesCatalogType catalog = new SeriesCatalogType();
 	Series series = new Series();
+
 	VariableInfoType variable = new VariableInfoType();
 	variable.setVariableName("testVariable");
+
 	series.setVariable(variable);
 	catalog.getSeries().add(series);
+
 	site.getSeriesCatalog().add(catalog);
 	site.setSiteInfo(siteInfo);
 	sirt.getSite().add(site);
+
 	JAXBElement<SiteInfoResponseType> jaxbElement = new JAXBElement<SiteInfoResponseType>(new QName("siteResponse"),
 		SiteInfoResponseType.class, sirt);
+
 	ByteArrayOutputStream baos = new ByteArrayOutputStream();
+
 	JAXBWML.getInstance().getMarshaller().marshal(jaxbElement, baos);
 	JAXBWML.getInstance().getMarshaller().marshal(jaxbElement, System.out);
-	baos.close();
-	String str = new String(baos.toByteArray());
-	assertTrue(str.contains("testVariable"));
-	assertTrue(str.contains("noDataValue"));
 
+	baos.close();
+
+	String str = baos.toString();
+
+	assertTrue(str.contains("testVariable"));
     }
 
 }
